--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-attrs==22.1.0
-exceptiongroup==1.0.4
-iniconfig==1.1.1
-packaging==22.0
+attrs==22.2.0
+daemonize==2.5.0
+exceptiongroup==1.1.1
+iniconfig==2.0.0
+packaging==23.0
 pluggy==1.0.0
-pytest==7.2.0
+pytest==7.2.2
 tomli==2.0.1
-flock==0.1
 xmltodict==0.13.0
