--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,4 @@ jobs:
     - name: Clone PyAPI
       run: (git clone https://github.com/clicon/clixon-pyapi.git && cd clixon-pyapi && pip3 install -r requirements.txt)
     - name: Run tests
-      run: (cd clixon-pyapi && pytest -v)
+      run: (cd clixon-pyapi && pytest)
