--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 attrs==23.1.0
+coverage==7.3.4
 daemonize==2.5.0
-exceptiongroup==1.1.3
+exceptiongroup==1.2.0
 iniconfig==2.0.0
 packaging==23.2
 pluggy==1.3.0
-pytest==7.4.2
+pytest==7.4.3
+pytest-cov==4.1.0
 tomli==2.0.1
 xmltodict==0.13.0
