--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,13 +9,22 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Install packages
-      run: sudo apt install -y python3-pip
-    - name: Clone PyAPI
-      run: (git clone https://github.com/clicon/clixon-pyapi.git && cd clixon-pyapi && pip3 install -r requirements.txt)
-    - name: Run tests
-      run: (cd clixon-pyapi && pytest)
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+          architecture: 'x64'
+          cache: 'pip'
+            #- name: Install dependencies
+            #  # Are we using wheel?
+            #  run: python -m pip install --upgrade pip setuptools wheel
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
+          pip install -r requirements.txt
+      - name: Test with pytest
+        run: |
+          pytest
