--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
           pip install -r requirements.txt
+      - name: Create folder
+        run: |
+          mkdir -p /usr/local/share/clixon/controller/modules/
       - name: Test with pytest
         run: |
           pytest
