--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ pluggy==1.4.0
 Pygments==2.17.2
 pytest==8.1.1
 pytest-cov==5.0.0
+PyYAML==6.0.1
 requests==2.31.0
 snowballstemmer==2.2.0
 Sphinx==7.3.6
