Run actions for the branch test-actions too.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,9 @@ name: Clixon PyAPI CI
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - test-actions
   pull_request:
     branches: [ main ]
 
