--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      VERSION: "1.1.0"
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
@@ -28,22 +26,38 @@ jobs:
       - name: Test with pytest
         run: |
           pytest
-      - name: install stdeb
-        run: sudo apt install python3-stdeb
-      - name: build Debian package
-        run: DEB_BUILD_OPTIONS=nocheck python3 setup.py --command-packages=stdeb.command bdist_deb
-      - name: Create deb packet
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  reset-run-number:
+    runs-on: ubuntu-latest
+    outputs:
+      run-number: ${{ steps.get-build.outputs.build-number }}
+    steps:
+      - name: Get build number and reset it
+        id: get-build
+        uses: mlilback/build-number@v1
         with:
-          tag_name: ${{env.VERSION}}_${{env.RUN_NUMBER}}
-          release_name: clixon-pyapi_${{env.VERSION}}-${{env.RUN_NUMBER}}
-          draft: false
-          prerelease: false
+          base: 0 # Update this number to reset counter
+          run-id: ${{ github.run_number }}
+
+  create-package:
+    needs: reset-run-number
+    runs-on: ubuntu-latest
+    env:
+      RUN_NUMBER: ${{ needs.reset-run-number.outputs.run-number }}
+      VERSION: "1.1.0"
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: true
+          fetch-depth: 0
+      - name: install deps
+        run: ./requirements-apt.sh
+      - name: install setup tools
+        run: sudo apt install -y python3-setuptools python3-stdeb
+      - name: create package
+        run: DEB_BUILD_OPTIONS=nocheck VERSION="${{env.VERSION}}_${{env.RUN_NUMBER}}" python3 setup.py --command-packages=stdeb.command bdist_deb
       - name: Upload artefact (clixon)
         uses: actions/upload-artifact@v4
         with:
-          name: python3-clixon-pyapi_${{env.VERSION}}-1_all.deb
-          path: ${{ github.workspace }}/deb_dist/python3-clixon-pyapi_${{env.VERSION}}-1_all.deb
+          name: python3-clixon-pyapi_${{env.VERSION}}_${{env.RUN_NUMBER}}-1_all.deb
+          path: ${{ github.workspace }}/deb_dist/python3-clixon-pyapi_${{env.VERSION}}_${{env.RUN_NUMBER}}-1_all.deb
