--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+coverage==7.6.3
 iniconfig==2.0.0
 packaging==24.1
 pluggy==1.5.0
 pytest==8.3.3
+pytest-cov==5.0.0
 PyYAML==6.0.2
 xmltodict==0.13.0
