--- a/debian/control
+++ b/debian/control
@@ -4,9 +4,8 @@ Priority: optional
 Maintainer: kristofer@sunet.se
 Build-Depends:
  debhelper-compat (= 12),
- dh-python,
- python3-all,
- python3-setuptools
+ python3-pyyaml,
+ python3-xmltodict
 Standards-Version: 4.5.0
 
 Package: python-clixon-pyapi
