--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: kristofer@sunet.se
 Build-Depends:
  debhelper-compat (= 12),
- python3-pyyaml,
+ python3-yaml,
  python3-xmltodict
 Standards-Version: 4.5.0
 
