Re-added dependencies to debian/control.

--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,8 @@ Priority: optional
 Maintainer: kristofer@sunet.se
 Build-Depends:
  debhelper-compat (= 12),
+ dh-python,
+ python3-all,
  python3-yaml,
  python3-xmltodict
 Standards-Version: 4.5.0
